[project]
name = "python-project"
version = "0.1.0"
description = "My awesome project"
license = "MIT"
authors = [
  { name = "Aldo Borrero", email = "82811+aldoborrero@users.noreply.github.com" },
]
readme = "README.md"
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Utilities",
  "Intended Audience :: Developers",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
fix = true
select = ['E', 'F', 'I', 'N']
ignore = ['E501']

[tool.ruff.isort]
force-sort-within-sections = true
no-lines-before = ["local-folder"]
known-first-party = ["python_project"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
